更改文字數

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           <p class="tro">新莊 杜先生</p>
         </div>
         <div class="carousel-item">
-          <h2 class="testimonial-text">您好,這是個好用的應用程式,推薦給你唷</h2>
+          <h2 class="testimonial-text">這是個好用的應用程式,推薦給你</h2>
           <img class="testimonials-image" src="images/2.png" alt="lady-profile">
           <p class="tro">新莊 洪小姐</p>
         </div>
